# finzanalysismodel

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
notebooks/: .gitkeep  train_colab.ipynb
scripts/: collect_data.py  serve.py
src/: config.py  train.py
src/api/: server.py
src/data/: dataset.py  dataset_builder.py  external_data.py  news_collector.py  price_collector.py
src/models/: momentum_model.py  sentence_attribution.py
